chainsaw/tests/failover-playground-ingress-resourceref-label/testdata/gslb.yaml
---
apiVersion: k8gb.absa.oss/v1beta1
kind: Gslb
metadata:
  name: failover-playground-ingress-resourceref-label
spec:
  resourceRef:
    apiVersion: networking.k8s.io/v1
    kind: Ingress
    matchLabels:
      app: failover-playground-ingress-resourceref-label
  strategy:
    type: failover
    dnsTtlSeconds: 5
    primaryGeoTag: "eu"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: failover-playground-ingress-resourceref-label
  labels:
    app: failover-playground-ingress-resourceref-label
spec:
  ingressClassName: nginx
  rules:
    - host: failover-playground-ingress-resourceref-label.cloud.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-podinfo
              port:
                name: http
